--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -368,6 +368,7 @@ i.icon-shape:after
 .dc-top-link_wrap .tabs .tabs__header
 .new-link-top-wrap .new-link-top-container
 #edit-page .block-hr
+.link-top-container
   border 0 !important
 
 .danmu-container
