--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -114,6 +114,7 @@ button
 .btn-dufault
 .container .host-list-layout .hot-list-wrap .bg-wrap .top-info-content .right-info .right-btn
 .song-playbtn
+.officialAccount-showContent-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
