--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -56,6 +56,8 @@
 .paging-box .current
 .comment .comment-selecotr .all-comments.active
 .comment .comment-selecotr .sortByHot.active
+.bb-comment .comment-header .tabs-order li:hover
+.comment-bilibili-fold .comment-header .tabs-order li:hover
 	color var(--c-accent) !important
 
 .bb-comment .comment-header
