--- a/bilibili-lite/src/public/iframe.styl
+++ b/bilibili-lite/src/public/iframe.styl
@@ -3,7 +3,8 @@
 regexp("^.*/pay/charge.*"),
 regexp("^.*/html/live-room-treasurebox/index.*"),
 regexp("^.*/html/live-lottery/anchor-join.*"),
-regexp("^.*/html/live-web-weekstar.*")
+regexp("^.*/html/live-web-weekstar.*"),
+regexp("^.*/activity-feedtag.*")
   /* 去除导航嵌套的 iframe 背景图 */
   html
     background-image none
@@ -13,7 +14,8 @@ regexp("^.*/html/live-web-weekstar.*")
 
 @-moz-document regexp("^.*/pay/charge.*"),
 regexp("^.*/html/live-room-treasurebox/index.*"),
-regexp("^.*/html/live-lottery/anchor-join.*")
+regexp("^.*/html/live-lottery/anchor-join.*"),
+regexp("^.*/activity-feedtag.*")
   /* 去除多余背景 */
   html
     background-color transparent
