--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -2,6 +2,7 @@
 .video-page-special-card
 .user-card-m iframe
 .bili-msg iframe
+.collection-m .layout
 	display none
 
 .bili-header-m .nav-menu .up-load .u-link
@@ -145,7 +146,7 @@ ul.star-wrapper li i.icon-star-full
 .v-wrap
 	margin-bottom 0 !important
 
-#comment
+#comment .comment
 #comment_module
 .main-container .media-info
 .main-container .review-module
@@ -188,7 +189,7 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player-video-btn-fullscreen:hover .bp-svgicon svg .st0
 	fill var(--c-accent) !important
 
-#comment
+#comment .comment
 #comment_module
 .main-container .media-info
 .r-con .recommend-list .rec-list
