--- a/bilibili-lite/src/video/index.styl
+++ b/bilibili-lite/src/video/index.styl
@@ -2,7 +2,8 @@
 url-prefix("https://www.bilibili.com/bangumi/"),
 url-prefix("https://player.bilibili.com/"),
 url-prefix("https://www.bilibili.com/watchlater"),
-url-prefix("https://www.bilibili.com/blackboard/newplayer.html") {
+url-prefix("https://www.bilibili.com/blackboard/newplayer.html"),
+url-prefix("https://www.bilibili.com/cheese/play/") {
 	/* 视频播放界面样式 */
 	@import 'base'
 	@import 'danmaku'
