--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -70,6 +70,8 @@ em:not(.icon)
 .video-card-common .title .live
 .info-item .notice-icon
 .live-record-card-cntr .cover .corner.new
+.block-list-item-label
+.multi-page .cur-list .list-box li .pay-label
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
