--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -14,6 +14,7 @@
   background-color var(--c-background) !important
 
 .imagesbox .boost-control
+.feed-tag .core-style
   background-color var(--c-hover) !important
 
 .video-container .text-area .title
@@ -37,6 +38,7 @@
 .clock-time
 .user-name.big-vip a
 .expand-btn
+.card .button-area .more-button:hover
   color var(--c-accent) !important
 
 .clock-time::after
@@ -47,8 +49,10 @@
   border-color var(--c-border) !important
 
 .feed-card .card
+.feed-tag .card
 .feed .card
 .dynamic-link-hover-bg:hover
+.feed-tag .core-style
   border 0 !important
 
 .text-area
