--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -47,6 +47,7 @@
 .live-room-app .link-navbar .shortcuts-ctnr .shortcut-item:hover .list-item span
 .user-item:hover .username
 .activity-item-ctnr:hover .info-ctnr .first-line .username
+.calendar-checkin .checkin-btn:hover
   color var(--c-accent) !important
 
 .info-item-ctnr
