--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -26,6 +26,7 @@
 .bilibili-live-player[data-player-type='player-home'] .bilibili-live-player-enter-tips:hover
 .blp-red-tip:after
 .living-icon-col
+.notice-item .notice-main .notice-title:before
 	background-color var(--c-accent) !important
 
 .notice-item .notice-main .notice-title
@@ -44,11 +45,13 @@
 	color var(--c-text) !important
 
 .activated
+.bilibili-live-player[data-player-type='player-home'] .bilibili-live-player-enter-tips
 	color var(--c-accent) !important
 
 .cover-ctnr .area-name
 .aside-item .aside-item-tips
 .ysly-room-ctnr .item .info span
+.bilibili-live-player[data-player-type='player-home'] .bilibili-live-player-enter-tips:hover
 	color var(--c-white) !important
 
 .bilibili-live-player[data-player-type='player-home'] .bilibili-live-player-enter-tips
@@ -60,6 +63,12 @@
 
 .highlight-area-item
 	box-shadow none !important
+
+.room-ctnr
+	margin 16px -10px 0 !important
+	padding 20px 10px 0
+	border-radius 4px
+	background-color var(--c-background)
 
 .bilibili-live-player button
 .live-player-ctnr button
