--- a/bilibili-lite/src/live/list.styl
+++ b/bilibili-lite/src/live/list.styl
@@ -6,17 +6,18 @@
 .wrapper .content .state-null>.txt>p:before
   display none !important
 
-#app-ctnr .content
-.child-nav
 .top3 li div.content-detail
 .rank-detail .top50
 .rank-detail .my-info
 .progress-tv
+#comment
   background-color var(--c-background) !important
 
 .rank-detail .top50 li:nth-child(2n)
   background-color var(--c-hover) !important
 
+#app-ctnr .content
+.child-nav
 .rank-detail dd .score
   background-color transparent !important
 
@@ -32,6 +33,8 @@
 
 .list-filter-bar .item-text.active span
 .list-filter-bar .item-text:hover span
+.child-nav li.active
+.child-nav li:hover
   color var(--c-accent) !important
 
 .wrap .state-null>.txt
@@ -45,11 +48,28 @@
 .wrapper .content .state-null>.txt
   display inline-block
 
+.content-panel .card-items li
+  margin 0 13.7px 24px !important
+
+.recommend-list .wrapper
+  margin 20px 0
+
+#comment
+  margin 100px auto 0 !important
+
 .main-content .main-container
   padding-top 60px
 
 .main-ctnr .content-ctn .header
   padding-top 80px
+
+.content-panel .card-items
+.recommend-list .list
+.wrap .list
+  margin 16px -10px 0 !important
+  padding 20px 10px 0 !important
+  border-radius 4px
+  background-color var(--c-background)
 
 .main-container>h1.title>span
   border-radius 10px
@@ -60,11 +80,12 @@
     display none !important
 
 .content-panel>h1.title>span
+.recommend-list .recommend-header .refresh
   border 0 !important
   font-size 0 !important
 
   .icon-font
-    font-size 20px
+    font-size 20px !important
     color var(--c-accent)
 
 .list-filter-bar .sort-box .item.active
