--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bilibili-lite
 @namespace      tolking-usercss
-@version        1.2.4
+@version        1.2.5
 @description    一个简化的bilibili页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-lite
@@ -1265,7 +1265,8 @@
   .bcc-pagination-item,
   .h .h-message,
   .container .musician-recommend .recommend-item .recommend-info .listen-btn,
-  .follow-container .follow-right .unfollow-btn {
+  .follow-container .follow-right .unfollow-btn,
+  .wide-members .avatar-list i {
     border: 1px solid var(--c-border) !important;
     background-color: var(--c-background) !important;
     color: var(--c-title) !important;
@@ -1361,7 +1362,8 @@
   .bcc-pagination-item span,
   .h .h-message span,
   .container .musician-recommend .recommend-item .recommend-info .listen-btn span,
-  .follow-container .follow-right .unfollow-btn span {
+  .follow-container .follow-right .unfollow-btn span,
+  .wide-members .avatar-list i span {
     color: var(--c-text) !important;
   }
   .default::after,
@@ -1453,7 +1455,8 @@
   .bcc-pagination-item::after,
   .h .h-message::after,
   .container .musician-recommend .recommend-item .recommend-info .listen-btn::after,
-  .follow-container .follow-right .unfollow-btn::after {
+  .follow-container .follow-right .unfollow-btn::after,
+  .wide-members .avatar-list i::after {
     content: none !important;
   }
   .default:hover,
@@ -1545,7 +1548,8 @@
   .bcc-pagination-item:hover,
   .h .h-message:hover,
   .container .musician-recommend .recommend-item .recommend-info .listen-btn:hover,
-  .follow-container .follow-right .unfollow-btn:hover {
+  .follow-container .follow-right .unfollow-btn:hover,
+  .wide-members .avatar-list i:hover {
     border-color: var(--c-accent) !important;
     background-color: var(--c-hover) !important;
     color: var(--c-text) !important;
@@ -1639,7 +1643,8 @@
   .bcc-pagination-item:hover span,
   .h .h-message:hover span,
   .container .musician-recommend .recommend-item .recommend-info .listen-btn:hover span,
-  .follow-container .follow-right .unfollow-btn:hover span {
+  .follow-container .follow-right .unfollow-btn:hover span,
+  .wide-members .avatar-list i:hover span {
     color: var(--c-text) !important;
   }
   .paging-box-big .dian,
@@ -3352,7 +3357,8 @@
   }
   .primary-menu .nav-menu .channel.on:after,
   .timeline-box .timeline-item.new p.num a,
-  .bangumi-item .cover-wrapper .corner-tag.badge_2 {
+  .bangumi-item .cover-wrapper .corner-tag.badge_2,
+  .coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper.is-today .line .point-wrapper .point {
     background-color: var(--c-accent) !important;
   }
   .video-item-biref .biref-info .biref-title,
@@ -3399,7 +3405,9 @@
   .bangumi-index-crumb ul li:hover a,
   .sort-item.on span,
   .filter-block .filter-item-wrapper .filter-item.on,
-  .bili-tab .bili-tab-item:hover {
+  .bili-tab .bili-tab-item:hover,
+  .coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper.is-today .date,
+  .coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper.is-today .time {
     color: var(--c-accent) !important;
   }
   .primary-menu.border-b,
@@ -4256,7 +4264,8 @@
   #comment_module {
     margin-top: 20px;
   }
-  .v-wrap {
+  .v-wrap,
+  .wide-members {
     margin-bottom: 0 !important;
   }
   #comment .comment,
@@ -5993,7 +6002,8 @@
   #comment {
     margin: 100px auto 0 !important;
   }
-  .main-content .main-container {
+  .main-content .main-container,
+  .wrapper .wrapper .content {
     padding-top: 60px;
   }
   .main-ctnr .content-ctn .header {
@@ -6001,7 +6011,8 @@
   }
   .content-panel .card-items,
   .recommend-list .list,
-  .wrap .list {
+  .wrap .list,
+  .wrapper .wrapper .content .list {
     margin: 16px -10px 0 !important;
     padding: 20px 10px 0 !important;
     border-radius: 4px;
@@ -8218,7 +8229,8 @@
   .rank-active-target,
   .rank-fans-medal,
   .rank-vedio-target,
-  .rank-vedio-view {
+  .rank-vedio-view,
+  .notify-tips {
     background-color: var(--c-hover) !important;
   }
   #dc-section_preference .list_wrap .list-item {
@@ -8368,7 +8380,8 @@
   .danmu-item .right-block .delete-protect div:hover,
   .stat-card .num .text,
   .comment_wrap .operate_wrap .operate_right .operate-txt.active,
-  .qa-area-ol-wrp .qa-icon {
+  .qa-area-ol-wrp .qa-icon,
+  .notify-tips .icon_wrap i {
     color: var(--c-accent) !important;
   }
   .bili-share-pc,
@@ -9607,6 +9620,137 @@
   button::after,
   .btn::after {
     content: none !important;
+  }
+}
+@-moz-document url-prefix("https://wiki.biligame.com/") {
+  .ref-tooltip-arrow:before {
+    display: none !important;
+  }
+  .game-bg,
+  .wiki-header .wiki-nav-celling,
+  .wiki-header .wiki-nav .ul-menu-1 .li-menu-1 .ul-menu-2,
+  .wiki-header .wiki-nav .ul-menu-1 .li-menu-1 .ul-menu-2 .li-menu-2 .ul-menu-3,
+  .vectorMenu .menu,
+  .ref-tooltip-text,
+  .wiki-header .wiki-nav.wiki-nav-celling {
+    background-color: var(--c-background) !important;
+  }
+  .wiki-header .wiki-nav .ul-menu-1 .li-menu-1:hover,
+  #simpleSearch1 #mw-searchButton,
+  #searchform,
+  .game-aggregation-wrap .game-card-list .game-card-list-item .game-card-button-lt,
+  .game-card-button-rt,
+  #siteNotice #localNotice,
+  #siteNotice .globalNotice,
+  .page-MediaWiki_Sitenotice .mw-content-ltr,
+  div.thumbinner,
+  .toc,
+  .mw-warning,
+  .toccolours,
+  code,
+  li.gallerybox div.thumb,
+  .loadbox-navbox,
+  .catlinks,
+  .mw-ui-checkbox:not(#noop) [type='checkbox'] + label:before,
+  .vectorMenu li a:hover {
+    background-color: var(--c-hover) !important;
+  }
+  .wiki-header,
+  .wiki-header .wiki-nav .nav-search-box,
+  #simpleSearch1,
+  #simpleSearch1 #searchDelete,
+  #simpleSearch1 #searchInput,
+  #simpleSearch1 #searchButton,
+  .sidebar-card,
+  #content .loadbox-navbox > p,
+  .fp-section,
+  .wiki-header .wiki-nav,
+  .home-box-bbc {
+    background-color: transparent !important;
+  }
+  .carousel.big-carousel .carousel-indicators li.active,
+  .mw-ui-checkbox:not(#noop) [type='checkbox']:enabled:checked + label:before {
+    background-color: var(--c-accent) !important;
+  }
+  h2 span,
+  code,
+  .title-1,
+  .update-log a {
+    color: var(--c-title) !important;
+  }
+  .game-aggregation-wrap .other-game-list-item .game-name,
+  .box-zt {
+    color: var(--c-text) !important;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  table,
+  code,
+  .wiki-header .wiki-nav .ul-menu-1 .li-menu-1,
+  .carousel.big-carousel .carousel-indicators li,
+  .carousel.big-carousel .carousel-indicators li.active,
+  #siteNotice #localNotice,
+  #siteNotice .globalNotice,
+  .page-MediaWiki_Sitenotice .mw-content-ltr,
+  div.thumbinner,
+  li.gallerybox div.thumb,
+  .loadbox-navbox,
+  .toc,
+  .mw-warning,
+  .toccolours,
+  .catlinks,
+  .ref-tooltip-text,
+  .mw-ui-checkbox:not(#noop) [type='checkbox'] + label:before,
+  .fp-section {
+    border-color: var(--c-border) !important;
+  }
+  .carousel.big-carousel .carousel-indicators li.active,
+  .mw-ui-checkbox:not(#noop) [type='checkbox']:enabled:checked + label:before {
+    border-color: var(--c-accent) !important;
+  }
+  .caret,
+  .ref-tooltip-arrow,
+  .ref-tooltip-arrow:before,
+  .ref-tooltip-arrow:after {
+    border-top-color: var(--c-border) !important;
+  }
+  .ref-tooltip-arrow:after {
+    border-top-color: var(--c-background) !important;
+  }
+  .home-box-n,
+  .home-box-bbc,
+  .wiki-header .wiki-nav .ul-menu-1 .li-menu-1 .ul-menu-2 .li-menu-2 .ul-menu-3 {
+    border: 0 !important;
+  }
+  .wiki-header .wiki-nav .ul-menu-1 .li-menu-1,
+  .wiki-header .wiki-nav .nav-search-box {
+    border-bottom-width: 0 !important;
+  }
+  .wiki-header .wiki-nav,
+  .wiki-header .wiki-nav .ul-menu-1 .li-menu-1 .ul-menu-2,
+  .wiki-header .wiki-nav .ul-menu-1 .li-menu-1 .ul-menu-2 .li-menu-2 .ul-menu-3,
+  .vectorMenu .menu {
+    border: 1px solid var(--c-border);
+  }
+  .wiki-header .wiki-nav .form-box {
+    border-left: 1px solid var(--c-border);
+  }
+  .wiki-header .wiki-nav .ul-menu-1 .li-menu-1 .ul-menu-2,
+  .wiki-header .wiki-nav .ul-menu-1 .li-menu-1 .ul-menu-2 .li-menu-2 .ul-menu-3 {
+    border-top-width: 0;
+  }
+  .mw-ui-input {
+    box-shadow: none;
+  }
+  .title-1 {
+    background-image: none;
+  }
+  .game-bg {
+    margin-bottom: 0;
   }
 }
 @-moz-document url-prefix("https://www.bilibili.com/watchlater") {
