--- a/bilibili-lite/src/game/index.styl
+++ b/bilibili-lite/src/game/index.styl
@@ -3,3 +3,7 @@ url-prefix("https://game.bilibili.com/") {
 	/* 游戏中心样式 */
 	@import 'base'
 }
+@-moz-document url-prefix("https://wiki.biligame.com/") {
+	/* wiki 样式 */
+	@import 'wiki'
+}
