--- a/bilibili-lite/src/live/list.styl
+++ b/bilibili-lite/src/live/list.styl
@@ -58,6 +58,7 @@
   margin 100px auto 0 !important
 
 .main-content .main-container
+.wrapper .wrapper .content
   padding-top 60px
 
 .main-ctnr .content-ctn .header
@@ -66,6 +67,7 @@
 .content-panel .card-items
 .recommend-list .list
 .wrap .list
+.wrapper .wrapper .content .list
   margin 16px -10px 0 !important
   padding 20px 10px 0 !important
   border-radius 4px
