--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -78,6 +78,7 @@
 .rank-fans-medal
 .rank-vedio-target
 .rank-vedio-view
+.notify-tips
   background-color var(--c-hover) !important
 
 #dc-section_preference .list_wrap .list-item
@@ -228,6 +229,7 @@ i.icon-shape:after
 .stat-card .num .text
 .comment_wrap .operate_wrap .operate_right .operate-txt.active
 .qa-area-ol-wrp .qa-icon
+.notify-tips .icon_wrap i
   color var(--c-accent) !important
 
 .bili-share-pc
