--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -65,6 +65,7 @@
 .primary-menu .nav-menu .channel.on:after
 .timeline-box .timeline-item.new p.num a
 .bangumi-item .cover-wrapper .corner-tag.badge_2
+.coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper.is-today .line .point-wrapper .point
 	background-color var(--c-accent) !important
 
 .video-item-biref .biref-info .biref-title
@@ -112,6 +113,8 @@
 .sort-item.on span
 .filter-block .filter-item-wrapper .filter-item.on
 .bili-tab .bili-tab-item:hover
+.coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper.is-today .date
+.coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper.is-today .time
 	color var(--c-accent) !important
 
 .primary-menu.border-b
