--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -237,6 +237,7 @@ button
 .h .h-message
 .container .musician-recommend .recommend-item .recommend-info .listen-btn
 .follow-container .follow-right .unfollow-btn
+.wide-members .avatar-list i
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
