--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -144,6 +144,7 @@ ul.star-wrapper li i.icon-star-full
 	margin-top 20px
 
 .v-wrap
+.wide-members
 	margin-bottom 0 !important
 
 #comment .comment
