--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -75,6 +75,7 @@
 .search-bar-ctnr .search-bar .search-btn
 .link-panel-ctnr .load-more .load-more-btn
 .attention-live .switch-btn
+	overflow visible !important
 	background-color transparent !important
 	color var(--c-text) !important
 
